plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
}

base {
    archivesName = "${mod_id}-${minecraft_version}"
    group = mod_group_id
    version = mod_version
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

neoForge {
    version = neo_version

    parchment {
        minecraftVersion = parchment_minecraft_version
        mappingsVersion = parchment_version
    }

    mods {
        create_biotech {
            sourceSet(sourceSets.main)
        }
    }

    runs {
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'mixin.debug.verbose', 'true'
            gameDirectory = project.file('run')
        }

        client {
            client()
        }

        server {
            server()
            gameDirectory = project.file('run/server')
            programArgument '--nogui'
        }

        data {
            data()
            programArguments.addAll(
                    '--mod', mod_id,
                    '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources').absolutePath
            )
        }

        gameTestServer {
            type = 'gameTestServer'
        }
    }
}

repositories {
    maven { url = 'https://maven.createmod.net' }
    maven { url = 'https://maven.ithundxr.dev/snapshots' }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://api.modrinth.com/maven' }
    maven { url = 'https://raw.githubusercontent.com/Fuzss/modresources/main/maven' }
    mavenCentral()
}

configurations {
    quickPlayMods
}

dependencies {
    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}")

    implementation("com.tterrag.registrate:Registrate:${registrate_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:${vanillin_version}")
    implementation("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")

    compileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

    compileOnly("maven.modrinth:jade:${jade_version}")

    compileOnly("io.github.llamalad7:mixinextras-common:${mixinextras_version}")
    annotationProcessor("io.github.llamalad7:mixinextras-common:${mixinextras_version}")

    quickPlayMods("com.simibubi.create:create-${minecraft_version}:${create_version}") {
        transitive = false
    }
    quickPlayMods("dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:${vanillin_version}") {
        transitive = false
    }
    quickPlayMods("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}") {
        transitive = false
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '.cache/'
}

def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_license            : mod_license,
            mod_description        : mod_description,
            create_version_range   : create_version_range,
            jei_version            : jei_version,
            jade_version           : jade_version
    ]

    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}

sourceSets.main.resources.srcDir(generateModMetadata)
neoForge.ideSyncTask(generateModMetadata)

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
    options.compilerArgs.addAll(['-Xmaxerrs', '1000'])
}

tasks.register('syncQuickPlayMods', Sync) {
    group = 'mod development'
    description = 'Stages the standalone runtime mod dependencies used by quickPlayClient.'
    from(configurations.quickPlayMods)
    into(layout.buildDirectory.dir('quickplay/mods'))
}

def configureQuickPlayClientTask = { Exec task, boolean onlineBuild ->
    task.group = 'mod development'
    task.description = onlineBuild
            ? 'Runs test.py with an online Gradle build, copies the mod jar, and quickplays the local NeoForge client.'
            : 'Runs test.py with an offline Gradle build, copies the mod jar, and quickplays the local NeoForge client.'
    task.workingDir = projectDir

    def command = [project.findProperty('pythonExecutable') ?: 'python', 'test.py']
    if (onlineBuild) {
        command += ['--online-build']
    }
    if (project.hasProperty('instance')) {
        command += ['--instance', project.property('instance').toString()]
    }
    if (project.hasProperty('world')) {
        command += ['--world', project.property('world').toString()]
    }
    if (project.hasProperty('skipBuild')) {
        command += ['--skip-build']
    }
    if (project.hasProperty('noCopy')) {
        command += ['--no-copy']
    }
    if (project.hasProperty('width')) {
        command += ['--width', project.property('width').toString()]
    }
    if (project.hasProperty('height')) {
        command += ['--height', project.property('height').toString()]
    }

    task.commandLine command
}

tasks.register('quickPlayClient', Exec) {
    configureQuickPlayClientTask(delegate, false)
}

tasks.register('quickPlayClientOnline', Exec) {
    configureQuickPlayClientTask(delegate, true)
}

jar {
    manifest {
        attributes([
                'Specification-Title'       : mod_id,
                'Specification-Vendor'      : mod_authors,
                'Specification-Version'     : '1',
                'Implementation-Title'      : project.name,
                'Implementation-Version'    : project.jar.archiveVersion,
                'Implementation-Vendor'     : mod_authors,
                'Implementation-Timestamp'  : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

    from('LICENSE.md') {
        rename { "${mod_name}_${it}" }
    }
    from('THIRD_PARTY_NOTICES.md')
}
